force-app/main/default/objects/FStudent__c/FStudent__c.object-meta.xml
<CustomObject>
    <label>FStudent</label>
    <nameField>
        <label>FStudent FullName</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FStudents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>