force-app/main/default/objects/FStudent__c/fields/F_Accounting_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>F_Accounting_Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>F Accounting Team Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>FStudents2</relationshipName>
    <type>Lookup</type>
</CustomField>