force-app/main/default/objects/FStudent__c/fields/F_Customer_Service_Member__c.field-meta.xml
<CustomField>
    <fullName>F_Customer_Service_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>F Customer Service Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>FStudents</relationshipName>
    <type>Lookup</type>
</CustomField>