force-app/main/default/objects/FStudent__c/fields/F_Technical_Support_Member__c.field-meta.xml
<CustomField>
    <fullName>F_Technical_Support_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>F Technical Support Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>FStudents1</relationshipName>
    <type>Lookup</type>
</CustomField>