force-app/main/default/objects/FStudent__c/fields/F_Type__c.field-meta.xml
<CustomField>
    <fullName>F_Type__c</fullName>
    <label>F Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Alumni</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>