force-app/main/default/objects/FStudent__c/fields/FCourse_Details__c.field-meta.xml
<CustomField>
    <fullName>FCourse_Details__c</fullName>
    <label>FCourse Details</label>
    <referenceTo>FCourse_Detail__c</referenceTo>
    <relationshipLabel>FStudents</relationshipLabel>
    <relationshipName>FStudents</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>