force-app/main/default/objects/FStudent__c/fields/FDescription__c.field-meta.xml
<CustomField>
    <fullName>FDescription__c</fullName>
    <label>FDescription</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>