force-app/main/default/objects/FStudent__c/fields/FStudent_Details__c.field-meta.xml
<CustomField>
    <fullName>FStudent_Details__c</fullName>
    <label>FStudent Details</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>FStudents</relationshipLabel>
    <relationshipName>FStudents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>